# webpage-saver

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
android/: build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/layout/: activity_main.xml  activity_openid_connection.xml  activity_openid_token_handler.xml  activity_setup.xml  activity_webbrowser.xml  content_openid_connection.xml  content_setup.xml  content_webbrowser.xml  fragment_first.xml  fragment_setup.xml
android/app/src/main/res/menu/: main_menu.xml
android/app/src/main/res/navigation/: nav_graph_setup.xml
android/gradle/wrapper/: gradle-wrapper.properties
backend/: Cargo.toml
backend/db/migrations/: 1_initial_pg_schema.sql  2_add_user_roles.sql  3_add_app_user_association.sql
backend/src/: auth.rs  errors.rs  lib.rs  main.rs  test_main.rs  webpages.rs
backend/test-utils/: Cargo.toml
backend/test-utils/src/: lib.rs
backend/tests/: endpoints.rs
backend/tests/data/: auth.sql
client/: Dockerfile  package-lock.json  package.json
client/components/: header.js  links-container.js  loading-error.js  loading.js  webpage-link.js
client/helpers/: cookies.js
client/pages/: _app.js  index.js  login.js
client/pages/api/: list-webpages.js  login.js  logout.js  verify-jwt.js
client/pages/api/delete-webpage/: [id].js
client/pages/api/show-webpage/: [id].js
client/pages/show/: [id].js
client/requests/: auth.js
client/styles/: Login.module.css  ShowStoredWebpage.module.css  Sidebar.module.css  WebpageLink.module.css  globals.css
db/migrations/: 1_initial-schema.sql  2_add_user_auth_table.sql  3_add_jwt_secrets_table.sql  4_add_title_and_image_url_to_webpage_table.sql  5_add_column_added_to_webpages.sql
docker/: Dockerfile-crosscompile  crosscompile.sh
frontend/: Dockerfile  middleware.js  next.config.js  package.json  tailwind.config.js
frontend/app/: layout.js  page.js
frontend/app/api/fetch/: route.js
frontend/app/api/list-webpages/: route.js
frontend/app/api/login/: route.js
frontend/app/api/logout/: route.js
frontend/app/api/verify-jwt/: route.js
frontend/app/auth/oauth2/authorize/: page.js
frontend/app/auth/oauth2/callback/: page.js
frontend/app/login/: page.js
frontend/app/show/[id]/: page.js
frontend/components/: base.js  header.js  links-container.js  loading-error.js  loading.js  sidebar.js  webpage-fetch.js  webpage-link.js
frontend/helpers/: api-requests.js  auth.js  cookies.js  revalidate.js  userinfo.js  utils.js
frontend/pages/: _app.js  index.js  login.js
frontend/pages/api/: associate-app-to-user.js  fetch.js  login.js
frontend/pages/api/auth/oauth2/: authorize.js  callback.js  refresh-token.js
frontend/pages/api/show-webpage/: [id].js
frontend/pages/auth/oauth2/: authorize.js  callback.js
frontend/pages/show/: [id].js
frontend/public/assets/img/: sources.md
frontend/requests/: associate-app-to-user.js  auth.js  delete-page.js  verify-jwt.js
frontend/styles/: Home.module.css  ShowStoredWebpage.module.css  WebpageLink.module.css  globals.css
scripts/: run-cargo-test.sh  start-dev.sh
src/: auth.rs  lib.rs  main.rs  test_main.rs  webpages.rs
src/test-data/: file.html
test-utils/: Cargo.toml
test-utils/src/: lib.rs
tests/: endpoints.rs
tests/data/: delete-webpage.sql
webextension/: manifest.json  package.json
webextension/icons/: licenses.md
webextension/src/: background.js  content.js  options.html  options.js
(+14 files in other folders)
