[package]
name = "article_server_rs"
version = "1.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.3"
chrono = "0.4"
clap = "2.33"
env_logger = "0.9"
html5ever = "0.25"
jsonwebtoken = "7.2"
kuchiki = "0.8"
lazy_static = "1.4.0"
log = "0.4"
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = {version = "0.5", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono"]}
tokio = { version = "1", features = ["full"] }
warp = "0.3"

[dev-dependencies]
zxcvbn = "2"
# Sharing test utility code between different tests: https://stackoverflow.com/a/44545091
test_utils = {path = "test-utils"}
# There doesn't seem to much difference between httpmock and wiremock in terms
# of functionality but wiremock seem to get slightly more attention and have
# more maintainers. At the moment it might also pull in less dependencies than
# httpmock (https://github.com/datafuselabs/databend/pull/4229).
# https://github.com/LukeMathWalker/wiremock-rs#prior-art
# https://github.com/alexliesenfeld/httpmock
wiremock = "0.5"
